# finch

./: .gitignore  CLAUDE.md  UBIQUITOUS_LANGUAGE.md  pitch.md
app/: app-spec.md
app/finch/: README.md  pubspec.yaml
app/finch/android/app/: build.gradle.kts
app/finch/ios/: Podfile  arti_bridge.podspec
app/finch/ios/Runner/: AppDelegate.swift  Info.plist  MdnsPlugin.swift  QrScannerPlugin.swift
app/finch/ios/Runner.xcodeproj/: project.pbxproj
app/finch/lib/: main.dart  router.dart
app/finch/lib/models/: connection_card.dart  encrypted_event.dart  envelope.dart  ephemeral_encrypted_event.dart  event.dart  event_kind.dart  models.dart  profile.dart  protocol_version.dart
app/finch/lib/providers/: app_paths_provider.dart  app_paths_provider.g.dart  bookmark_provider.dart  bookmark_provider.g.dart  comments_provider.dart  comments_provider.g.dart  compose_provider.g.dart  deep_link_provider.dart  deep_link_provider.g.dart  discovery_provider.dart  discovery_provider.g.dart  events_provider.dart  events_provider.g.dart  feed_provider.dart  feed_provider.g.dart  follow_profile_provider.dart  follow_profile_provider.g.dart  follow_provider.dart  follow_provider.g.dart  follow_requests_provider.dart  follow_requests_provider.g.dart  follows_provider.dart  follows_provider.g.dart  identity_provider.dart  identity_provider.g.dart  media_provider.dart  media_provider.g.dart  onboarding_provider.dart  onboarding_provider.g.dart  own_profile_provider.dart  own_profile_provider.g.dart  post_provider.dart  post_provider.g.dart  profile_provider.g.dart  qr_scanner_provider.dart  qr_scanner_provider.g.dart  reactions_provider.dart  reactions_provider.g.dart  search_provider.dart  search_provider.g.dart  (+8 more)
app/finch/lib/screens/: placeholder_screen.dart
app/finch/lib/server/: http_server.dart
app/finch/lib/services/: clock.dart  comment_service.dart  content_key_service.dart  crypto_service.dart  export_service.dart  follow_service.dart  lan_network_service.dart  mdns_service.dart  media_service.dart  network_service.dart  post_fanout_service.dart  post_service.dart  qr_scanner_service.dart  reaction_service.dart  reconnect_pusher.dart  relay_pairing_initiator.dart  relay_push_service.dart  signaling_service.dart  storage_service.dart  tor_service.dart  types.dart
app/finch/lib/shell/: app_shell.dart
app/finch/lib/sync/: manifest_exchange.dart  outbound_drain.dart  peer_connection_factory.dart  peer_reachability_monitor.dart  peer_reachability_provider.dart  peer_reachability_provider.g.dart  remote_media_fetcher.dart  sync_engine.dart  transport_router.dart
app/finch/lib/theme/: finch_colors.dart  finch_motion.dart  finch_spacing.dart  finch_theme.dart  finch_typography.dart
app/finch/lib/utils/: connection_card_parser.dart  deep_link_handler.dart  finch_address.dart  time_ago.dart
app/finch/lib/widgets/: avatar.dart  bookmark_button.dart  buttons.dart  comment_input.dart  comment_list.dart  dashed_border.dart  empty_feed.dart  encrypted_image.dart  finch_address_row.dart  finch_icon.dart  inputs.dart  qr_code.dart  qr_invite_sheet.dart  reaction_button.dart  sheet.dart  sync_dot.dart  tab_bar.dart  top_bar.dart
app/finch/native/arti_bridge/: Cargo.toml  README.md
app/finch/native/arti_bridge/.cargo/: config.toml
app/finch/native/arti_bridge/include/: arti_bridge.h
app/finch/native/arti_bridge/src/: inner.rs  lib.rs
app/finch/test/helpers/: fake_peer_reachability_monitor.dart
app/finch/test/models/: connection_card_serialization_test.dart  encrypted_event_serialization_test.dart  envelope_serialization_test.dart  event_serialization_test.dart  media_ref_serialization_test.dart
app/finch/test/providers/: compose_provider_test.dart  discovery_provider_test.dart  events_provider_test.dart
app/finch/test/router/: compose_route_test.dart
app/finch/test/server/: error_handler_test.dart  events_handler_test.dart  events_push_handler_test.dart  fixtures.dart  follow_accept_handler_test.dart  follow_request_handler_test.dart  http_server_test.dart  manifest_handler_test.dart  media_handler_test.dart  rate_limit_test.dart  status_handler_test.dart
app/finch/test/services/: comment_service_test.dart  follow_service_test.dart  mdns_service_test.dart  media_service_test.dart  post_service_test.dart  reaction_service_test.dart  save_service_test.dart
app/finch/test/sync/: concurrency_test.dart  key_refresh_throttle_test.dart  manifest_exchange_test.dart  outbound_drain_test.dart  sync_engine_test.dart
app/finch/test/utils/: connection_card_parser_test.dart  finch_address_test.dart
app/finch/test/vectors/: index.json  vectors_gen.dart  vectors_test.dart
app/plans/: 01-project-scaffolding.md  02-storage-service.md  03-crypto-service.md  04-identity-onboarding.md  04a-design-system-and-app-shell.md  05-post-creation.md  06-feed-display.md  07-http-server.md  08-follow-flow.md  09-lan-sync.md  10-comments-reactions.md  11-tor-wan-sync.md  12-storage-hardening.md  13-key-rotation.md  14-background-sync.md  15-desktop-relay.md  15-spare-device-relay.md  16-voice-chatrooms.md
app/starling/: README.md  analysis_options.yaml  pubspec.yaml
app/starling/android/app/: build.gradle.kts
app/starling/ios/: Podfile  arti_bridge.podspec  starling_bridge.podspec
app/starling/ios/Runner/: AppDelegate.swift  Info.plist  MdnsPlugin.swift  (+1 more)
app/starling/ios/Runner.xcodeproj/: project.pbxproj
app/starling/lib/: main.dart  router.dart
app/starling/native/starling_bridge/: Cargo.toml  build.rs  build.sh  cbindgen.toml
app/starling/native/starling_bridge/.cargo/: config.toml
app/starling/native/starling_bridge/include/: starling_bridge.h
app/starling/native/starling_bridge/src/: lib.rs
app/starling/native/starling_bridge/src/arti/: inner.rs  mod.rs
app/starling/native/starling_bridge/src/p2p/: inner.rs  interfaces.rs  mod.rs
plans/: finch-architecture.md  starling-architecture.md
protocol/plans/: protocol-spec.md
relay/plans/: relay-spec.md
(+408 files in other folders)
