[package]
name = "arti_bridge"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
name = "arti_bridge"
crate-type = ["staticlib", "cdylib"]

[dependencies]
anyhow = "1"
log = "0.4"
once_cell = "1"
parking_lot = "0.12"
tokio = { version = "1", features = ["rt-multi-thread", "sync", "time", "macros"] }

# Arti — pinned to a recent 0.x line. The exact patch version may need a bump
# when crates.io publishes newer releases; see native/arti_bridge/README.md.
arti-client = { version = "0.34", default-features = false, features = ["tokio", "rustls", "onion-service-client", "onion-service-service"] }
tor-hsservice = { version = "0.34" }
tor-hsrproxy = { version = "0.34" }
tor-rtcompat = { version = "0.34", features = ["tokio", "rustls"] }
tor-keymgr = { version = "0.34" }
tor-socksproto = { version = "0.34" }
fs-mistrust = "0.10"
safelog = "0.5"

# tor-dirmgr → rusqlite → libsqlite3-sys dynamically links against the
# host libsqlite3 by default. The Android NDK sysroot does not ship
# libsqlite3, so cross-compiles for *-linux-android fail to link.
# Cargo feature unification: declaring this dep with `bundled` flips
# the feature on the single libsqlite3-sys instance in the dep tree,
# forcing it to compile sqlite from the vendored C source instead.
libsqlite3-sys = { version = "0.35", features = ["bundled"] }

[build-dependencies]
cbindgen = "0.27"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = "symbols"
